--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ ul li {
 /* My Plans Styles */
 .plan-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -112,6 +112,17 @@ ul li {
     font-weight: 800;
     text-align: center;
     margin-bottom: 50px;
+}
+
+.single-plan{
+    background-color: aquamarine;
+    border-radius: 10px;
+    padding: 10px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .single-plan,
