--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ ul li {
 .plan-container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .plan-section {
@@ -119,10 +118,17 @@ ul li {
     border-radius: 10px;
     padding: 10px;
     width: 200px;
+
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.single-plan img{
+    border: 5px solid rgb(252, 252, 4);
+    border-radius: 50%;
+    padding: 20px;
 }
 
 .single-plan,
